--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -210,7 +210,7 @@ body {
 }
 
 .action-button a {
-  padding: 0.2rem 1rem;
+  padding: 0.1rem .8rem;
 }
 
 #arrow-button {
@@ -219,6 +219,10 @@ body {
   border: none;
   font-size: 2rem;
   padding: 0 .2rem 0 .2rem;
+}
+
+.service-record-title {
+  margin-top: 1%;
 }
 
 .service-details-expanded-1 {
@@ -254,4 +258,49 @@ body {
 .service-detail-record {
   font-size: 1.2rem;
   transform: scale(.9, 1.2);
+}
+
+.car-part-image {
+  height: 11rem;
+  width: 17rem;
+}
+
+.quantity-elem {
+  gap: 25%;
+}
+
+.quantity-btn {
+  height: 7%;
+  width: 20%;
+  background-color: #ffffff;
+  border: 1px solid #d4d5d5;
+  border-radius: 5px;
+  padding: .8% .8%;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+}
+
+.quantity-btn-style {
+  background-color: #023061;
+  color: #ffffff;
+  border: 1px solid #ffffff;
+  border-radius: 5px;
+  padding: 0 .5rem;
+  box-shadow: rgba(0, 0, 0, 0.04) 0px 3px 5px;
+}
+
+.quantity-btn-style-p {
+  margin: 0;
+  padding-top: .2%;
+  font-weight: 500;
+}
+
+.add-btn {
+  background-color: #023061;
+  color: #ffffff;
+  width: 40%;
+  margin: 0;
+  border: 1px solid #000000;
+  border-radius: 5px;
+  padding: 1% 10%;
+  box-shadow: rgba(0, 0, 0, 0.15) 0px 2px 2px 0px;
 }
